--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,494 +1,510 @@
 :root {
-    --pink: #ff073c;
-    --dark-pink: #cb0d35;
-    --dark: rgb(27, 27, 27);
+	--pink: #ff073c;
+	--blu: #1f76d4;
+	--dark-blu: #1964b5;
+	--dark-pink: #cb0d35;
+	--dark: rgb(27, 27, 27);
 }
 
 * {
-    font-family: "Roboto", sans-serif;
-    user-select: none;
+	font-family: "Roboto", sans-serif;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 html {
-    height: 100%;
+	height: 100%;
 }
 body {
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-}
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
 
-body {
-    height: 100vh;
-    background: var(--dark);
-    margin: 0;
+	height: 100vh;
+	/* background: var(--dark); */
+	margin: 0;
 }
 
 #wrap {
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
-    display: block;
-    position: relative;
+	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
 }
 
 img {
-    -webkit-user-drag: none;
-    user-select: none;
+	-webkit-user-drag: none;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 #room-code-input {
-    width: calc(100% - 50px);
-    height: 80px;
-    border-radius: 10px;
-    margin: 0 auto;
-    display: block;
-    position: relative;
-    border: none;
-    text-align: center;
-    font-size: 30px;
-    background-color: rgb(231, 231, 231);
+	width: calc(100% - 50px);
+	height: 80px;
+	border-radius: 10px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	border: none;
+	text-align: center;
+	font-size: 30px;
+	background-color: rgb(231, 231, 231);
 }
 
 input[type="text"] {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 input:focus {
-    outline: 0;
+	outline: 0;
 }
 
 #icon {
-    position: relative;
-    padding: 20px;
-    margin: 25px;
-    height: 120px;
-    display: block;
-    margin: 0 auto;
+	position: relative;
+	padding: 20px;
+	margin: 25px;
+	height: 120px;
+	display: block;
+	margin: 0 auto;
 }
 
 #host-room-text {
-    position: relative;
-    margin: 0 auto;
-    display: block;
-    color: white;
-    text-align: center;
-    margin-top: 20px;
-    user-select: none;
+	position: relative;
+	margin: 0 auto;
+	display: block;
+	color: rgba(255, 255, 255, 0.61);
+	text-align: center;
+	margin-top: 20px;
+	user-select: none;
 }
 
 #host-room-button {
-    color: var(--pink);
-    cursor: pointer;
+	color: white;
+	cursor: pointer;
+	border-bottom: 2px solid white;
 }
 
 #title {
-    color: white;
-    font-size: 50px;
-    display: block;
-    margin-top: 50px;
-    position: relative;
-    text-align: center;
+	color: white;
+	font-size: 50px;
+	display: block;
+	margin-top: 50px;
+	position: relative;
+	text-align: center;
 }
 
 #description {
-    color: grey;
-    font-size: 40px;
-    text-align: center;
-    display: block;
-    position: relative;
+	color: grey;
+	font-size: 40px;
+	text-align: center;
+	display: block;
+	position: relative;
 }
 
 #content-title {
-    color: white;
-    text-align: center;
-    display: block;
-    position: relative;
-    margin-top: 20px;
-    font-size: 20px;
+	color: white;
+	text-align: center;
+	display: block;
+	position: relative;
+	margin-top: 20px;
+	font-size: 20px;
 }
 
 #time {
-    color: white;
-    display: block;
-    position: relative;
-    text-align: center;
-    font-size: 17px;
-    margin-top: 5px;
-    /* margin-top: -10px; */
+	color: white;
+	display: block;
+	position: relative;
+	text-align: center;
+	font-size: 17px;
+	margin-top: 5px;
+	/* margin-top: -10px; */
 }
 
 #track {
-    display: block;
-    width: calc(100% - 30px);
-    position: relative;
-    height: 10px;
-    border-radius: 100px;
-    background-color: #111;
-    margin: 0 auto;
-    margin-top: 30px;
+	display: block;
+	width: calc(100% - 30px);
+	position: relative;
+	height: 10px;
+	border-radius: 100px;
+	background-color: #111;
+	margin: 0 auto;
+	margin-top: 30px;
 }
 
 #progress {
-    background: var(--dark-pink);
-    height: 10px;
-    border-radius: 100px;
-    width: 50%;
-    display: block;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    /*     transition: all 1s; */
+	background: var(--dark-blu);
+	height: 10px;
+	border-radius: 100px;
+	width: 50%;
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	/*     transition: all 1s; */
 }
 
 #point {
-    width: 20px;
-    height: 20px;
-    border-radius: 100px;
-    background-color: var(--pink);
-    top: -5px;
-    left: 220px;
-    position: absolute;
-    cursor: pointer;
-    -webkit-user-drag: none;
-    user-select: none;
+	width: 20px;
+	height: 20px;
+	border-radius: 100px;
+	background-color: var(--blu);
+	top: -5px;
+	left: 220px;
+	position: absolute;
+	cursor: pointer;
+	-webkit-user-drag: none;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 #media-queue {
-    display: block;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    height: calc(100vh - 90px);
-    width: 100%;
-    background: #cbcbcb;
-    /*   transition: ; */
+	display: block;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	height: calc(100vh - 90px);
+	width: 100%;
+	background: #cbcbcb;
+	/*   transition: ; */
 }
 
 #tab-menu {
-    width: 100%;
-    height: 80px;
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox; /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    position: absolute;
-    top: 0px;
+	width: 100%;
+	height: 80px;
+	display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox; /* TWEENER - IE 10 */
+	display: -webkit-flex; /* NEW - Chrome */
+	display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	position: absolute;
+	top: 0px;
 
-    left: 0px;
-    background: #e4e4e4;
+	left: 0px;
+	background: #e4e4e4;
 }
 
 .tab-button {
-    width: calc(100% / 3);
-    height: 80px;
-    display: inline-block;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
+	width: calc(100% / 3);
+	height: 80px;
+	display: inline-block;
+	position: relative;
+	margin: 0;
+	padding: 0;
+	cursor: pointer;
 }
 
 .tab-button:hover {
-    background: #d4d4d4;
+	background: #d4d4d4;
 }
 
 .tab-icon {
-    fill: var(--dark);
-    height: 50px;
-    margin: 0 auto;
-    display: block;
-    position: relative;
-    margin-top: 15px;
+	fill: var(--dark);
+	height: 50px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	margin-top: 15px;
 }
 
 #play-button,
 #skip-button {
-    display: inline-block;
-    margin: 0 auto;
-    fill: white;
-    cursor: pointer;
-    width: 80px;
-    margin-top: 15px;
+	display: inline-block;
+	margin: 0 auto;
+	fill: white;
+	cursor: pointer;
+	width: 80px;
+	margin-top: 15px;
 }
 
 #skip-button {
-    fill: rgb(255, 255, 255);
+	fill: rgb(255, 255, 255);
 }
 
 #controlls {
-    position: relative;
-    cursor: pointer;
-    width: 160px;
-    height: 80px;
-    margin: 0 auto;
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox; /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	position: relative;
+	cursor: pointer;
+	width: 160px;
+	height: 80px;
+	margin: 0 auto;
+	display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox; /* TWEENER - IE 10 */
+	display: -webkit-flex; /* NEW - Chrome */
+	display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 #back-icon {
-    height: 50px;
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    border-radius: 5px;
-    z-index: 100;
-    cursor: pointer;
+	height: 50px;
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	border-radius: 5px;
+	z-index: 100;
+	cursor: pointer;
 }
 
 #media-content {
-    width: 100%;
-    position: absolute;
-    bottom: 0px;
-    height: calc(100% - 80px);
+	width: 100%;
+	position: absolute;
+	bottom: 0px;
+	height: calc(100% - 80px);
 }
 
 .search {
-    width: calc(100% - 120px);
-    height: 30px;
-    font-size: 15px;
-    border: none;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 0 auto;
-    display: block;
-    position: relative;
-    margin-top: 20px;
-    margin-left: 20px;
+	width: calc(100% - 120px);
+	height: 30px;
+	font-size: 15px;
+	border: none;
+	padding: 10px;
+	border-radius: 10px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	margin-top: 20px;
+	margin-left: 20px;
 }
 
 .search-button {
-    height: 40px;
-    position: absolute;
-    right: 30px;
-    top: 25px;
-    cursor: pointer;
+	height: 40px;
+	position: absolute;
+	right: 30px;
+	top: 25px;
+	cursor: pointer;
 }
 
 #leave-button {
-    display: block;
-    position: absolute;
-    top: 6px;
-    right: 0px;
-    height: 45px;
-    width: 90px;
-    border-radius: 5px;
-    border: 2px rgb(112, 112, 112) solid;
-    background: none;
-    color: rgb(112, 112, 112);
-    cursor: pointer;
-    font-size: 15px;
+	display: block;
+	position: absolute;
+	top: 6px;
+	right: 0px;
+	height: 45px;
+	width: 90px;
+	border-radius: 5px;
+	border: 2px rgb(112, 112, 112) solid;
+	background: none;
+	color: rgb(112, 112, 112);
+	cursor: pointer;
+	font-size: 15px;
 }
 
 #bottom-controlls {
-    margin: 0 auto;
-    display: block;
-    position: relative;
-    width: 180px;
-    margin-top: 10px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	width: 180px;
+	margin-top: 10px;
 }
 
 #skip-box {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    display: block;
-    width: 60px;
-    height: 60px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	display: block;
+	width: 60px;
+	height: 60px;
 }
 
 #skip-info {
-    font-size: 30px;
-    color: grey;
-    text-align: center;
-    width: 100%;
-    display: block;
+	font-size: 30px;
+	color: grey;
+	text-align: center;
+	width: 100%;
+	display: block;
 }
 
 #skip-text {
-    font-size: 15px;
-    color: grey;
-    text-align: center;
-    display: block;
+	font-size: 15px;
+	color: grey;
+	text-align: center;
+	display: block;
 }
 
 .results {
-    height: calc(100vh - 245px);
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 80px;
-    left: 0px;
-    overflow: auto;
+	height: calc(100vh - 245px);
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: 80px;
+	left: 0px;
+	overflow: auto;
 }
 
 #queue-list {
-    height: 100%;
-    display: block;
-    width: 100%;
-    position: absolute;
-    left: 0px;
-    overflow: auto;
+	height: 100%;
+	display: block;
+	width: 100%;
+	position: absolute;
+	left: 0px;
+	overflow: auto;
 }
 
 .entry {
-    display: block;
-    position: relative;
-    height: 50px;
-    width: 90%;
-    border-radius: 10px;
-    background-color: #eaeaea;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    overflow: hidden;
+	display: block;
+	position: relative;
+	height: 50px;
+	width: 90%;
+	border-radius: 10px;
+	background-color: #eaeaea;
+	margin: 0 auto;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	overflow: hidden;
 }
 
 .video-title {
-    position: absolute;
-    left: 100px;
-    top: 5px;
-    display: block;
-    width: calc(100% - 180px);
+	position: absolute;
+	left: 100px;
+	top: 5px;
+	display: block;
+	width: calc(100% - 180px);
 }
 
 .add-button {
-    position: absolute;
-    height: 35px;
-    right: 7.5px;
-    top: 7.5px;
-    cursor: pointer;
+	position: absolute;
+	height: 35px;
+	right: 7.5px;
+	top: 7.5px;
+	cursor: pointer;
 }
 
 .thumbnail {
-    height: 100%;
+	height: 100%;
 }
 
 ::-webkit-scrollbar {
-    background-color: rgb(228, 228, 228);
-    width: 8px;
-    border-radius: 10px;
+	background-color: rgb(228, 228, 228);
+	width: 8px;
+	border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #7e7e7e;
-    border-radius: 10px;
+	background-color: #7e7e7e;
+	border-radius: 10px;
 }
 
 .center-text {
-    margin: 0 auto;
-    display: block;
-    position: relative;
-    margin-top: 20px;
-    text-align: center;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	margin-top: 20px;
+	text-align: center;
 }
 
 #spotify-login {
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 50px;
-    color: white;
-    width: 90%;
-    color: #1db954;
+	position: relative;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	margin-top: 50px;
+	color: white;
+	width: 90%;
+	color: #ffffffb6;
 }
 
 #spotify-button {
-    height: 50px;
-    width: 200px;
-    border: solid #1db954 2px;
-    color: #1db954;
-    font-size: 20px;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-    background: none;
+	height: 50px;
+	width: 200px;
+	border: solid #1db954 2px;
+	color: #1db954;
+	font-size: 20px;
+	border-radius: 5px;
+	margin-top: 10px;
+	cursor: pointer;
+	background: none;
 }
 
 a {
-    color: white;
-    margin-top: 5px;
-    position: relative;
-    display: block;
-    text-decoration: none;
+	color: white;
+	margin-top: 5px;
+	position: relative;
+	display: block;
+	text-decoration: none;
 }
 
 a:hover {
-    color: white;
+	color: white;
 }
 
 a:visited {
-    color: white;
+	color: white;
 }
 
 #spotify-player {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 #album {
-    height: 100vh;
-    position: relative;
-    margin: 0 auto;
-    display: block;
+	top: calc(100vh / 2 - 600px / 2);
+
+	height: 600px;
+	position: relative;
+	margin: 0 auto;
+	display: block;
 }
 
 #spotify-login-button {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    font-family: Circular, Helvetica, Arial, sans-serif;
-    -webkit-box-direction: normal;
-    box-sizing: border-box;
-    text-decoration: none;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: 700;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    user-select: none;
-    font-size: 14px;
-    line-height: 1;
-    border-radius: 500px;
-    padding: 16px 48px 18px;
-    transition-property: background-color, border-color, color, box-shadow,
-        filter, -webkit-box-shadow, -webkit-filter;
-    transition-duration: 0.3s;
-    border-width: 0;
-    letter-spacing: 2px;
-    min-width: 160px;
-    text-transform: uppercase;
-    white-space: normal;
-    color: #fff;
-    background-color: #1db954;
-    margin-top: 16px;
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    width: 280px;
-    margin-bottom: 15px;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	font-family: Circular, Helvetica, Arial, sans-serif;
+	-webkit-box-direction: normal;
+	box-sizing: border-box;
+	text-decoration: none;
+	display: inline-block;
+	margin-bottom: 0;
+	font-weight: 700;
+	text-align: center;
+	vertical-align: middle;
+	touch-action: manipulation;
+	cursor: pointer;
+	background-image: none;
+	border: 1px solid transparent;
+	user-select: none;
+	-webkit-user-select: none;
+	font-size: 14px;
+	line-height: 1;
+	border-radius: 500px;
+	padding: 16px 48px 18px;
+	transition-property: background-color, border-color, color, box-shadow,
+		filter, -webkit-box-shadow, -webkit-filter;
+	transition-duration: 0.3s;
+	border-width: 0;
+	letter-spacing: 2px;
+	min-width: 160px;
+	text-transform: uppercase;
+	white-space: normal;
+	color: #fff;
+	background-color: #1db954;
+	margin-top: 16px;
+	display: block;
+	margin: 0 auto;
+	position: relative;
+	width: 280px;
+	margin-bottom: 15px;
 }
 
 #spotify-login-button:hover {
-    background-color: #1ed760;
+	background-color: #1ed760;
 }
 
 #spotify-login-button:active {
-    background-color: #1aa34a;
-    color: #1db954;
+	background-color: #1aa34a;
+	color: #1db954;
+}
+
+#room-status-description {
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	margin-top: 10px;
 }
