--- a/website/css/style.css
+++ b/website/css/style.css
@@ -22,7 +22,7 @@ body {
 	bottom: 0;
 	right: 0;
 	left: 0;
-
+	background-color: black;
 	height: 100vh;
 	/* background: var(--dark); */
 	margin: 0;
@@ -53,6 +53,7 @@ img {
 	text-align: center;
 	font-size: 30px;
 	background-color: rgb(231, 231, 231);
+	border-spacing: 15px;
 }
 
 input[type="text"] {
@@ -278,6 +279,16 @@ input:focus {
 	cursor: pointer;
 }
 
+#link {
+	font-size: 20px;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	color: white;
+	position: relative;
+	margin-top: 5px;
+}
+
 #leave-button {
 	display: block;
 	position: absolute;
@@ -402,9 +413,8 @@ input:focus {
 	margin: 0 auto;
 	text-align: center;
 	margin-top: 50px;
-	color: white;
+	color: #1db954;
 	width: 90%;
-	color: #ffffffb6;
 }
 
 #spotify-button {
@@ -507,4 +517,14 @@ a:visited {
 	color: white;
 	font-size: 20px;
 	margin-top: 10px;
+}
+
+#canvas {
+	width: 100%;
+	height: 100vh;
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: -1;
 }
