--- a/website/css/style.css
+++ b/website/css/style.css
@@ -15,6 +15,7 @@
 html {
 	height: 100%;
 }
+
 body {
 	position: absolute;
 	overflow: hidden;
@@ -22,7 +23,7 @@ body {
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background-color: black;
+	background-color: rgb(0, 0, 0);
 	height: 100vh;
 	/* background: var(--dark); */
 	margin: 0;
@@ -178,11 +179,16 @@ input:focus {
 #tab-menu {
 	width: 100%;
 	height: 80px;
-	display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-	display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-	display: -ms-flexbox; /* TWEENER - IE 10 */
-	display: -webkit-flex; /* NEW - Chrome */
-	display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	display: -webkit-box;
+	/* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;
+	/* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;
+	/* TWEENER - IE 10 */
+	display: -webkit-flex;
+	/* NEW - Chrome */
+	display: flex;
+	/* NEW, Spec - Opera 12.1, Firefox 20+ */
 	position: absolute;
 	top: 0px;
 
@@ -233,11 +239,16 @@ input:focus {
 	width: 160px;
 	height: 80px;
 	margin: 0 auto;
-	display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-	display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-	display: -ms-flexbox; /* TWEENER - IE 10 */
-	display: -webkit-flex; /* NEW - Chrome */
-	display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	display: -webkit-box;
+	/* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;
+	/* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;
+	/* TWEENER - IE 10 */
+	display: -webkit-flex;
+	/* NEW - Chrome */
+	display: flex;
+	/* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 #back-icon {
@@ -413,7 +424,7 @@ input:focus {
 	margin: 0 auto;
 	text-align: center;
 	margin-top: 50px;
-	color: #1db954;
+	color: #d6d6d6;
 	width: 90%;
 }
 
