--- a/website/css/style.css
+++ b/website/css/style.css
@@ -8,8 +8,8 @@
 
 * {
 	font-family: "Roboto", sans-serif;
-	user-select: none;
-	-webkit-user-select: none;
+	/**user-select: none;*/
+	/* -webkit-user-select: none; */
 }
 
 html {
